--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <canvas id="webgpuCanvas" width="640" height="480"></canvas>
+    <h1 id="x-axis"></h1>
+    <h1 id="y-axis"></h1>
     <script src="webgpu.js"></script>
 </body>
 </html>
