reflective + cursor disturbance

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <canvas id="webgpuCanvas" width="640" height="480"></canvas>
     <h1 id="x-axis"></h1>
     <h1 id="y-axis"></h1>
+    <h1 id="x-text"></h1>
+    <h1 id="y-text"></h1>
+    <h1 id="frame"></h1>
     <script src="webgpu.js"></script>
 </body>
 </html>
